So 6. Feb 13:14:32 CET 2011
* PerlDaemon is now CamelCase

So 6. Feb 12:56:44 CET 2011
* Initial Version v1.0 Released
