@@ -2,3 +2,4 @@
 daemon.wd = ./
 daemon.pidfile = ./run/perldaemon.pid
 daemon.logfile = ./log/perldaemon.log
+daemon.require = ./lib/require.pm
