@@ -1,3 +1,7 @@
+Mo 7. Mär 21:43:23 CET 2011
+* Introduced simple OOP to the PerlDaemon 
+  Added a Logger and a DaemonLogic class.
+
 So 6. Feb 13:14:32 CET 2011
 * PerlDaemon is now CamelCase
 
